--- a/airs/theme/2020/templates/footer.html
+++ b/airs/theme/2020/templates/footer.html
@@ -211,9 +211,9 @@
               <div class="pv3 center">
                 <input type="text"
                       ftype="email"
-                      id="Company"
+                      id="Email"
                       class="db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl2"
-                      name="Company"
+                      name="Email"
                       maxlength="100"
                       placeholder="Email" />
               </div>
@@ -331,6 +331,28 @@
                   }
                   return true;
                 }
+
+                function validateEmail()
+                {
+                  var emailFld = document.querySelectorAll('[ftype=email]');
+                  var i;
+                  for (i = 0; i < emailFld.length; i++)
+                  {
+                    var emailVal = emailFld[i].value;
+                    if((emailVal.replace(/^\s+|\s+$/g, '')).length!=0 )
+                    {
+                      var atpos=emailVal.indexOf('@');
+                      var dotpos=emailVal.lastIndexOf('.');
+                      if (atpos<1 || dotpos<atpos+2 || dotpos+2>=emailVal.length)
+                      {
+                        alert('Please enter a valid email address. ');
+                        emailFld[i].focus();
+                        return false;
+                      }
+                    }
+                  }
+                  return true;
+                }
     
                 function checkMandatory4687720000000388007() {
                 for(i=0;i<mndFileds.length;i++) {
@@ -357,7 +379,7 @@
                     alert('Please accept  '+fldLangVal[i]);
                     fieldObj.focus();
                     return false;
-                    } 
+                    }
                   } 
                   try {
                       if(fieldObj.name == 'Last Name') {
