airs\fix(front): #3686 fix solutions link
- Fixed the link to Solutions index page in the menu


Former-commit-id: 9078af2b64a934ef3da42d5bae0c8f246a0f1d67

--- a/airs/theme/2020/templates/menu.html
+++ b/airs/theme/2020/templates/menu.html
@@ -578,7 +578,7 @@
       </li>
       <li class="db-l dn fr mr3 pr2 pv4 solutions-index">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
-            href="{{ SITEURL }}/services/continuous-hacking/">
+            href="{{ SITEURL }}/solutions/">
           <button class="outline-transparent fw4 ba b--white bw1 ph0 pv2 hv-fluid-rd bg-transparent pointer">
             Solutions<div class="dib w1"><i class="fas fa-angle-down"></i></div>
           </button>
