--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -69,23 +69,23 @@
 
 {% block content %}
 
-<div class="slideshow-container bg-quotes bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
+<div class="slideshow-home fadein bg-quote1 bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="slideshow-inner w-100 ph4">
-    <div class="mySlides fadein">
+    <div class="mySlide1 fadein">
       <div>
         <h2 class="white center roboto w-100 tc ph3 f1 lh-solid mw7">
           Comprehensive Hacking at the Speed of your Business
         </h2>
       </div>
     </div>
-    <div class="mySlides fadein dn">
+    <div class="mySlide2 fadein dn">
       <div>
         <h2 class="white center roboto w-100 tc ph3 f1 lh-solid mw7">
           Effective Automation and Human Intelligence
         </h2>
       </div>
     </div>
-    <div class="mySlides fadein dn">
+    <div class="mySlide3 fadein dn">
       <div>
         <h2 class="white center roboto w-100 tc ph3 f1-l f2 lh-solid mw7">
           We are a proud corporate member of the OWASP Foundation
@@ -94,9 +94,9 @@
     </div>
   </div>
   <div class="tc w-100 h1 absolute pt7 mt6">
-    <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
-    <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
-    <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
+    <span class="dot1 h-slide-bt w2 ma0 bg-fluid-red hv-fluid-red dib slide-bt-trans pointer"></span>
+    <span class="dot2 h-slide-bt w2 ma0 bg-fluid-gray hv-fluid-red dib slide-bt-trans pointer"></span>
+    <span class="dot3 h-slide-bt w2 ma0 bg-fluid-gray hv-fluid-red dib slide-bt-trans pointer"></span>
   </div>
   {% assets output="static/js/contactSlides.min.js", "js/tmp/contactSlides.min.js" %}
   <script type="text/javascript"
