--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -94,9 +94,9 @@
     </div>
   </div>
   <div class="tc w-100 h1 absolute pt7 mt6">
-    <span class="dot1 h-slide-bt w2 ma0 bg-fluid-red hv-fluid-red dib slide-bt-trans pointer"></span>
-    <span class="dot2 h-slide-bt w2 ma0 bg-fluid-gray hv-fluid-red dib slide-bt-trans pointer"></span>
-    <span class="dot3 h-slide-bt w2 ma0 bg-fluid-gray hv-fluid-red dib slide-bt-trans pointer"></span>
+    <span class="dot1 h-slide-bt w2 ma0 bg-fluid-red hv-bt-fluid-rd dib slide-bt-trans pointer"></span>
+    <span class="dot2 h-slide-bt w2 ma0 bg-fluid-gray hv-bt-fluid-rd dib slide-bt-trans pointer"></span>
+    <span class="dot3 h-slide-bt w2 ma0 bg-fluid-gray hv-bt-fluid-rd dib slide-bt-trans pointer"></span>
   </div>
   {% assets output="static/js/contactSlides.min.js", "js/tmp/contactSlides.min.js" %}
   <script type="text/javascript"
