airs\refac(front): #3658.1 new styles for contact
- Changed the style of the contact form


Former-commit-id: 687a448bf00b5e829fcb645ffc759e0b3e1d5f9d

--- a/airs/theme/2020/templates/footer.html
+++ b/airs/theme/2020/templates/footer.html
@@ -199,25 +199,28 @@
               <input type='text' style='display:none;' name='xmIwtLD' value='78c3d7dacbbcd07154bafdf9da4878771131756c5fc0387baa3f5706a0968b4b'></input> 
               <input type='text'  style='display:none;' name='actionType' value='TGVhZHM='></input>
               <input type='text' style='display:none;' name='returnURL' value='https://fluidattacks.com/contact-us/thank-you/' > </input>
-    
+
               <div class="pv3 center">
+                <label class="tl f5 c-fluid-bk roboto">Full Name</label>
                 <input type="text"
                       id="Last_Name"
-                      class="db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl2"
+                      class="db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2"
                       name="Last Name"
                       maxlength="120"
                       placeholder="Full Name" />
               </div>
               <div class="pv3 center">
+                <label class="tl f5 c-fluid-bk roboto">Email</label>
                 <input type="text"
                       ftype="email"
                       id="Email"
-                      class="db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl2"
+                      class="db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2"
                       name="Email"
                       maxlength="100"
                       placeholder="Email" />
               </div>
               <div class="pv3 center">
+                <label class="tl f5 c-fluid-bk roboto">Mobile</label>
                 <input id="Country"
                       name="Country"
                       maxlength="100"
@@ -230,7 +233,7 @@
                         maxlength="30"
                         name="Mobile"
                         type="text"
-                        class="db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl2"
+                        class="db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2"
                         required
                         placeholder="Mobile" />
                 <span id="valid-msg"
@@ -248,12 +251,13 @@
               </script>
               {% endassets %}
               <div class="pv3 center">
+                <label class="tl f5 c-fluid-bk roboto">How can we help you?</label>
                 <select id="LEADCF23"
                         name="LEADCF23"
-                        class="gray db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl1"
+                        class="gray db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2"
                         required>
                   <option value="-None-">
-                    How can we help you?</option>
+                    Select...</option>
                   <option value="I want a service proposal">
                     I want a service proposal</option>
                   <option value="I&#x20;want&#x20;a&#x20;Demo">
@@ -265,10 +269,11 @@
                 </select>
               </div>
               <div class="poi dn pv3 center">
+                <label class="tl f5 c-fluid-bk roboto">Products of interest</label>
                 <select id="LEADCF24"
                         name="LEADCF24"
-                        class="gray roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl1">
-                  <option value="-None-">Products of interest:</option>
+                        class="gray roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2">
+                  <option value="-None-">Select...</option>
                   <option value="Undetermined">
                     Undetermined
                   </option>
@@ -296,14 +301,9 @@
               <div class="tc">
                 <input type="submit"
                       id="formsubmit"
-                      class="formsubmit bn br2 bannerbt hv-bt-fluid-rd bt-pd pv3 bt-trans white b roboto pointer mh3"
-                      value="Submit"
+                      class="formsubmit bn br2 bannerbt hv-bt-fluid-rd bt-pd pv3 bt-trans white b roboto pointer w-100"
+                      value="Send your request"
                       title="Submit" />
-                <input type="reset"
-                      class="br2 button-white pv3 bt-pd bt-trans c-fluid-bk b roboto pointer outline-transparent mh3"
-                      name="reset"
-                      value="Reset"
-                      title="Reset" />
               </div>
               <script>
                 var mndFileds=new Array('Company','Last Name','Mobile','LEADCF23');
