--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -56,6 +56,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .bc-fluid-gray { border-color: $fluid-gray; }
 .bc-fluid-red { border-color: $button-red; }
 .bc-hover-red { border-color: $button-hover; }
+.bc-fluid-bk { border-color: $lightblack; }
 .bg-dk-red { background-color: $button-red;}
 .bg-graylight { background-color: $graylight; }
 .bg-graybar { background-color: $graybar; }
@@ -255,6 +256,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .w-benefit { width: 400px; }
 .services-features  { .sect2 { min-height: 720px !important; } }
 .mw-1200 { max-width: 1200px; }
+.h-form-field { height: 3rem; }
 
 // Tachyons custom responsive classes
 @media screen and (min-width: 960px) and (max-width: 1199px) {
