--- a/airs/theme/2020/templates/contact-us.html
+++ b/airs/theme/2020/templates/contact-us.html
@@ -102,23 +102,25 @@
           <input type='text' style='display:none;' name='returnURL' value='https://fluidattacks.com/contact-us/thank-you/' > </input>
 
           <div class="w-50-l pv3 center">
+            <label class="tl f5 c-fluid-bk roboto">Full Name</label>
             <input type="text"
                   id="Last_Name"
-                  class="db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl2"
+                  class="db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2"
                   name="Last Name"
-                  maxlength="120"
-                  placeholder="Full Name" />
+                  maxlength="120" />
           </div>
           <div class="w-50-l pv3 center">
+            <label class="tl f5 c-fluid-bk roboto">Email</label>
             <input type="text"
                   ftype="email"
                   id="Email"
-                  class="db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl2"
+                  class="db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2"
                   name="Email"
                   maxlength="100"
                   placeholder="Email" />
           </div>
           <div class="w-50-l pv3 center">
+            <label class="tl f5 c-fluid-bk roboto">Mobile</label>
             <input id="Country"
                   name="Country"
                   maxlength="100"
@@ -131,7 +133,7 @@
                     maxlength="30"
                     name="Mobile"
                     type="text"
-                    class="db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl2"
+                    class="db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2"
                     required
                     placeholder="Mobile" />
             <span id="valid-msg"
@@ -149,12 +151,13 @@
           </script>
           {% endassets %}
           <div class="w-50-l pv3 center">
+            <label class="tl f5 c-fluid-bk roboto">How can we help you?</label>
             <select id="LEADCF23"
                     name="LEADCF23"
-                    class="gray db roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl1"
+                    class="gray db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2"
                     required>
               <option value="-None-">
-                How can we help you?</option>
+                Select...</option>
               <option value="I want a service proposal">
                 I want a service proposal</option>
               <option value="I&#x20;want&#x20;a&#x20;Demo">
@@ -166,10 +169,11 @@
             </select>
           </div>
           <div class="poi dn w-50-l pv3 center">
+            <label class="tl f5 c-fluid-bk roboto">Products of interest</label>
             <select id="LEADCF24"
                     name="LEADCF24"
-                    class="gray roboto f5 w-100 h2 ma0 outline-transparent bb-form bt-0 br-0 bl-0 bg-transparent pl1">
-              <option value="-None-">Products of interest:</option>
+                    class="gray roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2">
+              <option value="-None-">Select...</option>
               <option value="Undetermined">
                 Undetermined
               </option>
@@ -194,21 +198,16 @@
           <div  id="recapErr" style="font-size:12px;color:red;visibility:hidden;">
           Captcha validation failed. If you are not a robot then please try again.
           </div>
-          <div class="tc">
+          <div class="tc w-50-l center">
             <input type="submit"
                   id="formsubmit"
-                  class="formsubmit bn br2 bannerbt hv-bt-fluid-rd bt-pd pv3 bt-trans white b roboto pointer mh3"
-                  value="Submit"
-                  title="Submit" />
-            <input type="reset"
-                  class="br2 button-white pv3 bt-pd bt-trans c-fluid-bk b roboto pointer outline-transparent mh3"
-                  name="reset"
-                  value="Reset"
-                  title="Reset" />
+                  class="formsubmit bn br2 bannerbt hv-bt-fluid-rd bt-pd pv3 bt-trans white b roboto pointer w-100"
+                  value="Send your request"
+                  title="Submit"></input>
           </div>
           <script>
             var mndFileds=new Array('Company','Last Name','Mobile','LEADCF23');
-            var fldLangVal=new Array('Email','Full name','Mobile','How can we help you'); 
+            var fldLangVal=new Array('Email','Full name','Mobile','How can we help you');
             var name='';
             var email='';
 
