--- a/airs/theme/2020/templates/contact-us.html
+++ b/airs/theme/2020/templates/contact-us.html
@@ -105,21 +105,21 @@
             <label class="tl f5 c-fluid-bk roboto">Full Name</label>
             <input type="text"
                   id="Last_Name"
-                  class="db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2"
+                  class="db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-gray bg-transparent pl2"
                   name="Last Name"
                   maxlength="120" />
           </div>
-          <div class="w-50-l pv3 center">
+          <div class="w-50-l pb3 center">
             <label class="tl f5 c-fluid-bk roboto">Email</label>
             <input type="text"
                   ftype="email"
                   id="Email"
-                  class="db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2"
+                  class="db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-gray bg-transparent pl2"
                   name="Email"
                   maxlength="100"
                   placeholder="Email" />
           </div>
-          <div class="w-50-l pv3 center">
+          <div class="w-50-l pb3 center">
             <label class="tl f5 c-fluid-bk roboto">Mobile</label>
             <input id="Country"
                   name="Country"
@@ -133,7 +133,7 @@
                     maxlength="30"
                     name="Mobile"
                     type="text"
-                    class="db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2"
+                    class="db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-gray bg-transparent pl2"
                     required
                     placeholder="Mobile" />
             <span id="valid-msg"
@@ -150,11 +150,11 @@
                   src="{{ SITEURL }}/{{ ASSET_URL }}">
           </script>
           {% endassets %}
-          <div class="w-50-l pv3 center">
+          <div class="w-50-l pb3 center">
             <label class="tl f5 c-fluid-bk roboto">How can we help you?</label>
             <select id="LEADCF23"
                     name="LEADCF23"
-                    class="gray db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2"
+                    class="gray db roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-gray bg-transparent pl2"
                     required>
               <option value="-None-">
                 Select...</option>
@@ -168,11 +168,11 @@
                 I want to be a partner</option>
             </select>
           </div>
-          <div class="poi dn w-50-l pv3 center">
+          <div class="poi dn w-50-l pb3 center">
             <label class="tl f5 c-fluid-bk roboto">Products of interest</label>
             <select id="LEADCF24"
                     name="LEADCF24"
-                    class="gray roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-bk bg-transparent pl2">
+                    class="gray roboto f5 w-100 h-form-field ma0 outline-transparent ba br2 bc-fluid-gray bg-transparent pl2">
               <option value="-None-">Select...</option>
               <option value="Undetermined">
                 Undetermined
@@ -260,17 +260,17 @@
               if(fieldObj) {
               if (((fieldObj.value).replace(/^\s+|\s+$/g, '')).length==0) {
               if(fieldObj.type =='file')
-                { 
-                alert('Please select a file to upload.'); 
-                fieldObj.focus(); 
+                {
+                alert('Please select a file to upload.');
+                fieldObj.focus();
                 return false;
-                } 
-              alert(fldLangVal[i] +' cannot be empty.'); 
+                }
+              alert(fldLangVal[i] +' cannot be empty.');
                       fieldObj.focus();
                       return false;
               }  else if(fieldObj.nodeName=='SELECT') {
                     if(fieldObj.options[fieldObj.selectedIndex].value=='-None-') {
-                alert(fldLangVal[i] +' cannot be none.'); 
+                alert(fldLangVal[i] +' cannot be none.');
                 fieldObj.focus();
                 return false;
                 }
@@ -279,8 +279,8 @@
                 alert('Please accept  '+fldLangVal[i]);
                 fieldObj.focus();
                 return false;
-                } 
-              } 
+                }
+              }
               try {
                   if(fieldObj.name == 'Last Name') {
                 name = fieldObj.value;
