--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -120,6 +120,16 @@ label {
   border-color: #007BFF;
 }
 
+:global .commit {
+  bottom: 8px;
+  right: 16px;
+}
+
+:global .deploymentDate {
+  bottom: 32px;
+  right: 16px;
+}
+
 :global .dropdown-menu > li > a:hover {
   background-color: #ff3435;
   color: #fff;
