--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -169,6 +169,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .bg-faq { background-image: url('../../images/faq/cover-faq.png'); }
 .bg-compliance { background-image: url('../../images/compliance/cover-compliance.png'); }
 .bg-compliance-internal { background-image: url('../../images/compliance/cover-internal-compliance.png'); }
+.bg-systems { background-image: url('../../images/systems/cover-systems.png'); }
 .b-max { font-weight: 999; }
 .nb-6 { margin-bottom: -6rem;}
 .lower-img { &:hover { transform: scale(1.1);
