airs\feat(doc): #3596 cloud systems page
- Added Cloud infraestructure Systems page content


Former-commit-id: 8da7349d2b917d8433cd1134cea142a3a17764a1

--- a/airs/theme/2020/templates/compliance.html
+++ b/airs/theme/2020/templates/compliance.html
@@ -56,7 +56,7 @@
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
              href=".">
-            Compliance
+            {{page.category|capitalize}}
           </a>
           <span class="c-fluid-gray v-mid b"> / </span>
         </li>
