integrates\refac(front): #3705.2 update login scene
- add class to 2fabuttons to be in line position on mobile devices
- adapt the login scene for mobile devices


Former-commit-id: 37e54d9f2d110bf91d8ed1a4a9838fbf53656124

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -140,6 +140,13 @@ label {
   width: 405px;
 }
 
+@media (max-width: 450px) {
+  :global .login-grid {
+    height: unset;
+    width: unset;
+  }
+}
+
 .lightFg {
   color: #fff;
 }
