airs\feat(cross): #3581.3 footer redesign
- Add new categories to the footer


Former-commit-id: b2633e1310d9b51e421348f7f5491debdda67971

--- a/airs/theme/2020/templates/footer.html
+++ b/airs/theme/2020/templates/footer.html
@@ -111,6 +111,102 @@
       <div class="pt4-l b dib-xl display-none v-top tl mh2">
         <div class="lh-2">
           <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+            href="{{ SITEURL }}/techniques/sast/" >
+            Techniques
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/techniques/sast/">
+            SAST
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/techniques/dast/">
+            DAST
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/techniques/iast/">
+            IAST
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/techniques/sca/">
+            SCA
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/techniques/sre/">
+            SRE
+          </a><br>
+        </div>
+      </div>
+      <div class="pt4-l b dib-xl display-none v-top tl mh2">
+        <div class="lh-2">
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+            href="{{ SITEURL }}/systems/web-apps/" >
+            Systems
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/systems/web-apps/">
+            Web applications
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/systems/microservices/">
+            APIs and Microservices
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/systems/cloud-infrastructure/">
+            Cloud Infrastructure
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/systems/networks/">
+            Networks
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/systems/mobile-apps/">
+            Mobile Applications
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/systems/thick-clients/">
+            Thick Clients
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/systems/iot/">
+            Internet of Things
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/systems/operational-technology/">
+            Operational Tech
+          </a><br>
+        </div>
+      </div>
+      <div class="pt4-l b dib-xl display-none v-top tl mh2">
+        <div class="lh-2">
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+            href="{{ SITEURL }}/compliance/owasp/" >
+            Compliance
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/compliance/owasp/">
+            OWASP
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/compliance/pci/">
+            PCI
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/compliance/hipaa/">
+            HIPAA
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/compliance/nist/">
+            NIST
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/compliance/gdpr/">
+            GDPR
+          </a><br>
+        </div>
+      </div>
+      <div class="pt4-l b dib-xl display-none v-top tl mh2">
+        <div class="lh-2">
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
             href="{{ SITEURL }}/about-us/" >
             About Us
           </a><br>
