--- a/integrates/backend_new/app/templates/app.html
+++ b/integrates/backend_new/app/templates/app.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <div id="root"></div>
-    {% if 'localhost' in request.get_host and debug %}
+    {% if '127.0.0.1' in request.client.host and debug %}
       <script src="https://localhost:3000/dashboard/app-bundle.min.js" type="text/javascript"></script>
     {% else %}
       <script src="{{ js }}" type="text/javascript"></script>
