integrates\refac(front): #259.1 update breadcrum css
- Change the active, focus, hover color of breadcrum component


Former-commit-id: 3dad86fad90b5970be570224f15e12cc38a48aa6

--- a/integrates/front/src/scenes/Dashboard/components/Navbar/index.css
+++ b/integrates/front/src/scenes/Dashboard/components/Navbar/index.css
@@ -16,6 +16,12 @@
   padding: 0 2px;
 }
 
+:local .breadcrumb > li + li > a > a:active,
+.breadcrumb > li + li > a > a:focus,
+.breadcrumb > li + li > a > a:hover {
+  color: #272727 !important;
+}
+
 :local .navbarForm {
   margin-bottom: 4px;
   margin-top: 4px;
@@ -24,7 +30,7 @@
 :local .splitButton button:active,
 .splitButton button:focus,
 .splitButton button:hover {
-  color: #23527c !important;
+  color: #272727 !important;
   background: transparent !important;
 }
 
