airs\refac(front): #3657 font sizes in home
- Adjust title sizes in smaller screens


Former-commit-id: c5edb36b2ed7d4e8a12b7c73eb5a134acbd23b56

--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -73,14 +73,14 @@
   <div class="slideshow-inner w-100 ph4">
     <div class="mySlide1 fadein">
       <div>
-        <h2 class="white center roboto w-100 tc ph3 f1 lh-solid mw7">
+        <h2 class="white center roboto w-100 tc ph3 f1-l f2 lh-solid mw7">
           Comprehensive Hacking at the Speed of your Business
         </h2>
       </div>
     </div>
     <div class="mySlide2 fadein dn">
       <div>
-        <h2 class="white center roboto w-100 tc ph3 f1 lh-solid mw7">
+        <h2 class="white center roboto w-100 tc ph3 f1-l f2 lh-solid mw7">
           Effective Automation and Human Intelligence
         </h2>
       </div>
@@ -251,7 +251,7 @@
       </div>
     </div>
     <a href="{{ SITEURL }}/services/continuous-hacking/" class="c-fluid-bk no-underline">
-      <h2 class="f1 fw6 c-fluid-bk roboto mt4 mb6 tc lh-solid">
+      <h2 class="f1 f-18 fw6 c-fluid-bk roboto mt4 mb6 tc lh-solid">
         These four elements, which are part of our Continuous Hacking service,
         allow your company to achieve high vulnerability remediation rates
       </h2>
@@ -261,7 +261,7 @@
 <div class="bg-solutions bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="mw-1366 ph-body center pv0-l pv4">
     <div class="w-100 mw8 center">
-      <h2 class="white tc roboto f1 fw7 mv3 lh-title">
+      <h2 class="white tc roboto f1 f-18 fw7 mv3 lh-title">
         Continuous Hacking: Multiple Solutions, One Service
       </h2>
     </div>
@@ -305,7 +305,7 @@
 </div>
 <div class="bg-compliance bg-banner-sz coverm cover-s section-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="tc">
-    <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3 mw7 lh-title">
+    <h2 class="white center roboto w-100 tc f1 f-18 lh3 pl3-l ph3 mw7 lh-title">
       We can help you comply with the following standards, among others<br>
     </h2>
     <a href="{{ SITEURL }}/products/rules/" class="no-underline">
@@ -338,7 +338,7 @@
 <!-- Ebook section -->
 <div class="bg-ebook bg-banner-sz cover bg-center section-height justify-center items-center flex flex-wrap minh-100vh">
   <div>
-    <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3 mw7 lh-title">
+    <h2 class="white center roboto w-100 tc f1 f-18 lh3 pl3-l ph3 mw7 lh-title">
       Are you going fast in the wrong direction?<br>
     </h2>
     <h3 class="white center roboto w-100 tc f2-ns f4 pl3-l ph3 mw7">
