integrates\fix(back): #3642 add tracking code
- Add tracking code to integrates dasboard template
(`app.html` and `index.html`).


Former-commit-id: fc50b2e0279fa44ff1dae4dcafe8b55edd9543c2

--- a/integrates/backend_new/app/templates/app.html
+++ b/integrates/backend_new/app/templates/app.html
@@ -4,6 +4,17 @@
     {% if not debug %}
       <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="9c4480b4-b8ae-44d8-9c6f-6300b86e9094" data-blockingmode="auto" type="text/javascript"></script>
     {% endif %}
+    <!-- Hotjar Tracking Code for https://integrates.fluidattacks.com/new/ -->
+    <script>
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:2087725,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="">
