--- a/airs/theme/2020/templates/contact-us.html
+++ b/airs/theme/2020/templates/contact-us.html
@@ -188,22 +188,32 @@
                   Please select an option
             </span>
           </div>
-          <div class="g-recaptcha ma-auto w6 center"
-              data-sitekey="6LdUZt8ZAAAAAIZuuUl4N3iIsL3FMevSSmuRSFmx"
-              data-theme="light"
-              data-callback="rccallback"
-              captcha-verified="false"
-              id="recap">
-          </div>
           <div  id="recapErr" style="font-size:12px;color:red;visibility:hidden;">
           Captcha validation failed. If you are not a robot then please try again.
           </div>
-          <div class="tc w-50-l center">
-            <input type="submit"
-                  id="formsubmit"
-                  class="formsubmit bn br2 bannerbt hv-bt-fluid-rd bt-pd pv3 bt-trans white b roboto pointer w-100"
-                  value="Send your request"
-                  title="Submit"></input>
+          <div class="tc  w-50-l center">
+            <button id="modalBtn" class="hv-bt-fluid-rd bt-pd pv3 bt-trans white b roboto w-100 bannerbt bn br2 pointer">
+              Submit
+            </button>
+          </div>
+          <div id="contactModal" class="contact-modal dn fixed z-1 h-100 w-100 top-0 left-0 fadein">
+            <span class="close-modal dn"></span>
+            <div class="pt6">
+              <div class="g-recaptcha ma-auto w6 center"
+                  data-sitekey="6LdUZt8ZAAAAAIZuuUl4N3iIsL3FMevSSmuRSFmx"
+                  data-theme="light"
+                  data-callback="rccallback"
+                  captcha-verified="false"
+                  id="recap">
+              </div>
+              <div class="tc w-50-l center pv3">
+                <input type="submit"
+                      id="formsubmit"
+                      class="formsubmit bn br2 bannerbt hv-bt-fluid-rd bt-pd pv3 bt-trans white b roboto pointer w6"
+                      value="Send your request"
+                      title="Submit"></input>
+              </div>
+            </div>
           </div>
           <script>
             var mndFileds=new Array('Company','Last Name','Mobile','LEADCF23');
