--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -397,6 +397,10 @@ label {
   border-color: #FF3435;
 }
 
+:global .b--salmon{
+  border-color: #f2dede;
+}
+
 :global .b--sb,
 :global .b--sb:active,
 :global .b--sb:focus,
@@ -449,6 +453,10 @@ label {
   background-color: #FF3435;
 }
 
+:global .bg-salmon {
+  background-color: #f2dede;
+}
+
 :global .bg-sb,
 :global .bg-sb:active,
 :global .bg-sb:focus,
@@ -474,6 +482,10 @@ label {
 
 :global .bottom-15 {
   bottom: 15rem;
+}
+
+:global .burgundy {
+  color: #a94442;
 }
 
 :global .cna-bd[disabled],
